--- a/cronometro/index.html
+++ b/cronometro/index.html
@@ -3,14 +3,18 @@
 <head>
     <title>Cronômetro</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
-    <div id="container_cronometro">
-        <h1 id="display">00:00:00</h1>
-        <button id="start" onclick="start()">Start</button>
-        <button id="pause" onclick="pause()">Pause</button>
-        <button id="reset" onclick="reset()">Reset</button>
+    <div id="timer">
+        <div id="display">00:00:00</div>
+        <button id="start" onclick="Start()">Iniciar</button>
+        <button id="pause" onclick="Pause()">Pausar</button>
+        <button id="clean" onclick="Clean()">Limpar</button>
+        
+        <div id="timer_history">
+
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
