--- a/cronometro/index.html
+++ b/cronometro/index.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
+    <!-- container que conterá o display e os botões--> 
     <div id="timer">
-            <div id="display">00:00:00</div>
-            <button id="start" onclick="Start()">Iniciar</button>
-            <button id="pause" onclick="Pause()">Pausar</button>
-            <button id="clean" onclick="Clean()">Limpar</button>
+        <!-- container para caber o conteudo de contagem do display -->
+        <div id="display">00:00:00</div>
+        <!-- definição dos botões do cronômetro com evento de clique para
+         a chamada de funções de iniciar, pausar e resetar a contagem do 
+        display -->
+        <button id="start" onclick="Start()">Iniciar</button>
+        <button id="pause" onclick="Pause()">Pausar</button>
+        <button id="reset" onclick="Reset()">Resetar</button>
     </div>
     <script src="scripts.js"></script>
 </body>
