--- a/cronometro/index.html
+++ b/cronometro/index.html
@@ -13,9 +13,11 @@
         <!-- definição dos botões do cronômetro com evento de clique para
          a chamada de funções de iniciar, pausar e resetar a contagem do 
         display -->
-        <button id="start" onclick="Start()">Iniciar</button>
-        <button id="pause" onclick="Pause()">Pausar</button>
-        <button id="reset" onclick="Reset()">Resetar</button>
+        <div id="buttons_container">
+            <button id="start" onclick="Start()">Iniciar</button>
+            <button id="pause" onclick="Pause()">Pausar</button>
+            <button id="reset" onclick="Reset()">Resetar</button>
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
